# nn-inference-template

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
assets/: CMakeLists.txt
eval-banchmark/: plotBenchmark.ipynb  requirements.txt
minimal-inference/libtorch/: CMakeLists.txt  minimal-libtorch.cpp
minimal-inference/onnxruntime/: CMakeLists.txt  minimal-onnxruntime.cpp
minimal-inference/tensorflow-lite/: CMakeLists.txt  minimal-tflite.cpp
source/: Configs.h  MyPrePostProcessor.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
source/dsp/inference/: InferenceBuffer.h  InferenceConfig.h  InferenceConfigNew.h  InferenceHandler.cpp  InferenceHandler.h  InferenceManager.cpp  InferenceManager.h  InferenceThread.cpp  InferenceThread.h  InferenceThreadPool.cpp  InferenceThreadPool.h  PrePostProcessor.h  SessionElement.cpp  SessionElement.h
source/dsp/inference/backends/: LibtorchProcessor.cpp  LibtorchProcessor.h  OnnxRuntimeProcessor.cpp  OnnxRuntimeProcessor.h  TFLiteProcessor.cpp  TFLiteProcessor.h
source/dsp/inference/scheduler/: InferenceManager.cpp  InferenceManager.h  InferenceThread.cpp  InferenceThread.h  InferenceThreadPool.cpp  InferenceThreadPool.h  SessionElement.cpp  SessionElement.h
source/dsp/inference/utils/: AudioBuffer.h  HostAudioConfig.h  InferenceBackend.h  RingBuffer.cpp  RingBuffer.h
source/dsp/utils/: HostConfig.h  MonoStereo.cpp  MonoStereo.h  RingBuffer.cpp  RingBuffer.h  ThreadSafeBuffer.cpp  ThreadSafeBuffer.h
source/ui/: BackendSelector.cpp  BackendSelector.h
source/ui/DetailView/: DetailViewButton.cpp  DetailViewButton.h  DetailWindow.cpp  DetailWindow.h  DetailWindowComponent.cpp  DetailWindowComponent.h
test/: benchmark.cpp  test.cpp
validate-real-time-principles/: CMakeLists.txt  README.md
validate-real-time-principles/libtorch/: CMakeLists.txt  validate-real-time-principles-libtorch.cpp
validate-real-time-principles/onnxruntime/: CMakeLists.txt  validate-real-time-principles-onnxruntime.cpp
validate-real-time-principles/tensorflow-lite/: CMakeLists.txt  validate-real-time-principles-tflite.cpp
